[gd_scene load_steps=5 format=3 uid="uid://dbf2t7va3l002"]

[ext_resource type="Script" uid="uid://kqi3x2omvqat" path="res://SaveAndLoad/LoadMenu.gd" id="1_8cngq"]
[ext_resource type="PackedScene" uid="uid://b0ne2ctjlfdqj" path="res://SaveAndLoad/LoadButton.tscn" id="2_mint3"]
[ext_resource type="Texture2D" uid="uid://djo53ep2hv88p" path="res://icon.svg" id="3_6e13g"]
[ext_resource type="FontFile" uid="uid://b6ne2ntjnur2e" path="res://Assets/fonts/MinecraftBold-nMK1.otf" id="3_iysqx"]

[node name="LoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cngq")
LoadButton = ExtResource("2_mint3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 89.0
offset_top = 52.0
offset_right = 401.0
offset_bottom = 408.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadButtons" type="VBoxContainer" parent="CanvasLayer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="New" type="Button" parent="CanvasLayer/Panel/ScrollContainer/LoadButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_iysqx")
text = "NEW"

[node name="LoadScene" type="Button" parent="CanvasLayer"]
offset_left = 806.0
offset_top = 504.0
offset_right = 918.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 38
text = "LOAD"

[node name="BACK" type="Button" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 476.0
offset_right = 150.0
offset_bottom = 507.0
theme_override_font_sizes/font_size = 38
text = "BACK"

[node name="ScreenShot" type="TextureRect" parent="CanvasLayer"]
offset_left = 572.0
offset_top = 19.0
offset_right = 636.0
offset_bottom = 83.0
scale = Vector2(8.41837, 4.99352)
texture = ExtResource("3_6e13g")
expand_mode = 1

[node name="Date" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 682.0
offset_top = 398.0
offset_right = 998.0
offset_bottom = 438.0
theme_override_fonts/normal_font = ExtResource("3_iysqx")
text = "Date"
fit_content = true
scroll_active = false

[node name="Name" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 680.0
offset_top = 356.0
offset_right = 1010.0
offset_bottom = 396.0
theme_override_fonts/normal_font = ExtResource("3_iysqx")
text = "Name"
fit_content = true
scroll_active = false

[node name="Seed" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -476.0
offset_top = -216.0
offset_right = -146.0
offset_bottom = -176.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_iysqx")
text = "Seed
"
fit_content = true
scroll_active = false

[node name="Delete" type="Button" parent="CanvasLayer"]
offset_left = 484.0
offset_top = 490.0
offset_right = 549.0
offset_bottom = 521.0
theme_override_font_sizes/font_size = 37
text = "DELETE"

[node name="multiplayer" type="Button" parent="CanvasLayer"]
offset_left = 268.0
offset_top = 552.0
offset_right = 420.0
offset_bottom = 595.0
text = "MULTIPLAYER"

[connection signal="pressed" from="CanvasLayer/Panel/ScrollContainer/LoadButtons/New" to="." method="_on_new_pressed"]
[connection signal="button_down" from="CanvasLayer/LoadScene" to="." method="_on_load_scene_button_down"]
[connection signal="pressed" from="CanvasLayer/BACK" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="CanvasLayer/multiplayer" to="." method="_on_multiplayer_pressed"]
